--- a/MobileGames/mobile-master/index.html
+++ b/MobileGames/mobile-master/index.html
@@ -86,34 +86,30 @@
             <a href="#gears" class="navbar-link">Games</a>
           </li>
 
-          <li>
-            <a href="#contact" class="navbar-link">Contact</a>
-          </li>
-
         </ul>
 
         <ul class="nav-social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://twitter.com/inventiveworks1?t=r0Dph4sS25fbMcCoG4A0dw&s=09" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="ttps://www.instagram.com/invites/contact/?i=1s0atztwx3u8w&utm_content=plpfrux" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.tiktok.com/@inventiveworks.org?_t=8WArzdzcVGf&_r=1" class="social-link">
               <ion-icon name="logo-tiktok"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=100086009904647"><i class="bx bxl-facebook" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -488,7 +484,7 @@
 
                     <div class="card-title-wrapper">
 
-                      <h3 class="h3 card-title">ho h1</h3>
+                      <h3 class="h3 card-title">bill board ai game</h3>
 
                       <p class="card-subtitle">Game</p>
 
@@ -781,13 +777,13 @@
           <ul class="footer-social-list">
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="https://twitter.com/inventiveworks1?t=r0Dph4sS25fbMcCoG4A0dw&s=09" class="footer-social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="https://www.tiktok.com/@inventiveworks.org?_t=8WArzdzcVGf&_r=1" class="footer-social-link">
                 <ion-icon name="logo-tiktok"></ion-icon>
               </a>
             </li>
@@ -799,13 +795,13 @@
             </li>
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="https://www.facebook.com/profile.php?id=100086009904647" class="footer-social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="ttps://www.instagram.com/invites/contact/?i=1s0atztwx3u8w&utm_content=plpfrux" class="footer-social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
