--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
             <li style="--i:1;"><a href="./About/index.html">About Us</a></li>
             <li style="--i:4;"><a href="./contact us/contactus.html">Contact Us</a></li>
-            <li style="--i:4;"><a href="./Admin/password/password.html">Admin!</a></li>
+            <li style="--i:4;"><a href="./Admin/password/password.html">Admin Login</a></li>
         </ul>
     </div>
 
