--- a/3dprint.html
+++ b/3dprint.html
@@ -506,7 +506,7 @@
                       <!--<del>R44.00</del>-->
                         <ul class="header-social-container">
                           <li>
-                            <a href="Asssets/Order-form/form.html" class="social-link">
+                            <a href="/Asssets/FORMS/Order-form/form.html" class="social-link">
                               <i class="fa-solid fa-cart-plus"></i>
                             </a>
                           </li>                                 
@@ -529,7 +529,7 @@
                       <h6>InStock: 1</h6>
                       <ul class="header-social-container">
                         <li>
-                          <a href="Asssets/Order-form/form.html" class="social-link">
+                          <a href="/Asssets/FORMS/Order-form/form.html" class="social-link">
                             <i class="fa-solid fa-cart-plus"></i>
                           </a>
                         </li> 
@@ -554,7 +554,7 @@
                       <h6>InStock: 1</h6>
                       <ul class="header-social-container">
                         <li>
-                          <a href="Asssets/Asssets/Order-form/form.html" class="social-link">
+                          <a href="/Asssets/FORMS/Order-form/form.html" class="social-link">
                             <i class="fa-solid fa-cart-plus"></i>
                           </a>
                         </li> 
@@ -578,7 +578,7 @@
                       <h6>InStock: 1</h6>
                       <ul class="header-social-container">
                         <li>
-                          <a href="Asssets/Order-form/form.html" class="social-link">
+                          <a href="/Asssets/FORMS/Order-form/form.html" class="social-link">
                             <i class="fa-solid fa-cart-plus"></i>
                           </a>
                         </li> 
@@ -673,7 +673,7 @@
                 <div class="showcase-container">           
                   <div class="showcase">            
                     <a  class="showcase-img-box">
-                      <img src="./assets/images/products/phonestand.png" alt="girls pink embro design top" class="showcase-img" width="70">
+                      <img src="/Asssets/assets/images/products/phonestand.png" alt="girls pink embro design top" class="showcase-img" width="70">
                     </a>                 
                     <div class="showcase-content">                  
                       <a class="showcase-category"></a>
@@ -687,7 +687,7 @@
                       <!--<del>R44.00</del>-->
                       <ul class="header-social-container">
                         <li>
-                          <a href="Asssets/Order-form/form.html" class="social-link">
+                          <a href="/Asssets/FORMS/Order-form/form.html" class="social-link">
                             <i class="fa-solid fa-cart-plus"></i>
                           </a>
                         </li>                 
