--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
             <li style="--i:1;"><a href="./Asssets/About/index.html">About Us</a></li>
             <li style="--i:4;"><a href="./Asssets/FORMS/contact us/contactus.html">Contact Us</a></li>
-            <!--<li style="--i:4;"><a href="./Asssets/Gallary/Christmass/Christmass.html">Christmass</a></li>
-            <li style="--i:4;"><a href="./Asssets/Gallary/Easter/easter.html">Easter</a></li>
-            <li style="--i:4;"><a href="./Asssets/Gallary/New Years/">New Years</a></li>
-            <li style="--i:4;"><a href="./Asssets/Gallary/Toys/toys.html">Toys</a></li>
-            <li style="--i:4;"><a href="./Asssets/Gallary/Christmass/Christmass.html">Random</a></li>-->
+            <li style="--i:4;"><a href="./Asssets/Yoco-Service_form/Regestration-Form/service.html">Work For US</a></li>
+            
             <br> 
             <li style="--i:4;"><a href="./Asssets/Admin/password/password.html">Admin Login</a></li>
+            <li style="--i:4;"><a href="https://qfcoihnqfwasuhqnfqwas.github.io/Sales-Team/">Service Sales Login</a></li>
             <!--<li style="--i:4;"><a href="./Asssets/Yoco-Service_form/Regestration-Form/service.html">Service Regestration Form</a></li>-->
         </ul>
     </div>
@@ -29,7 +27,7 @@
         <h1>Welcome To Inventiveworks.</h1>
         <p>Select you're catigory.</p>
         <div>
-            <a href="3dprint.html">
+            <a href="#">
                 <button type="button">3D - Printing</button>
             </a>
             <a href="/Asssets/InventiveWorks/index.html">
