--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
             <li style="--i:1;"><a href="./Asssets/About/index.html">About Us</a></li>
             <li style="--i:4;"><a href="./Asssets/FORMS/contact us/contactus.html">Contact Us</a></li>
-            <!--<li style="--i:4;"><a href="./Asssets/Yoco-Service_form/Regestration-Form/service.html">Work For US</a></li>-->
+            <li style="--i:4;"><a href="./Asssets/Yoco-Service_form/Regestration-Form/service.html">Work For US</a></li>
             
             <br> 
             <li style="--i:4;"><a href="./Asssets/Admin/password/password.html">Admin Login</a></li>
