--- a/Asssets/TermsofService/index.html
+++ b/Asssets/TermsofService/index.html
@@ -11,7 +11,7 @@
     <div class="terms-box">
         <div class="terms-text">
             <h2>Terms Of Service</h2>
-            <p>Last Edit: 04/13/2022</p>
+            <p>Last Edit: 26/10/2022</p>
             <p>Greetings Users,</p>
             <p>I Agree, That i am financially able to afford the plans.</p>
             <p>I Agree, To give the customer the corrrect amount given by the Admin.</p>
@@ -21,6 +21,7 @@
             <p>I Agree, To have data 24/7 For Sales.</p>
             <p>I Agree, To Place Orders Every Month / Week.</p>
             <p>I Agree, On Meating at a close enough location for pickup.</p>
+            <p>I Agree, Customers must only have Bank Card No Cash.</p>
             <br>
             <p>Terms and Conditions for Inventiveworks</p>
             <p>Introduction
