--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
             <li style="--i:1;"><a href="./Asssets/About/index.html">About Us</a></li>
             <li style="--i:4;"><a href="./Asssets/FORMS/contact us/contactus.html">Contact Us</a></li>
-            <li style="--i:4;"><a href="./Asssets/Terms of Service/index.html">Work For US</a></li>
+            <li style="--i:4;"><a href="./Asssets/TermsofService/index.html">Work For US</a></li>
             
             <br> 
             <li style="--i:4;"><a href="./Asssets/Admin/password/password.html">Admin Login</a></li>
@@ -27,7 +27,7 @@
         <h1>Welcome To Inventiveworks.</h1>
         <p>Select you're catigory.</p>
         <div>
-            <a href="#">
+            <a href="https://q3feihvand12rqfwa.000webhostapp.com/home.php">
                 <button type="button">3D - Printing</button>
             </a>
             <a href="/Asssets/InventiveWorks/index.html">
