--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Welcome To Inventiveworks.</h1>
         <p>Select you're catigory.</p>
         <div>
-            <a href="https://q3feihvand12rqfwa.000webhostapp.com/home.php">
+            <a href="3dprint.html">
                 <button type="button">3D - Printing</button>
             </a>
             <a href="/Asssets/InventiveWorks/index.html">
