--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <div class="toggle"><span></span></div>
         <ul>
             <!--<li style="--i:0;"><a href="#">Home</a></li>-->
-            <li style="--i:1;"><a href="./Asssets/About/index.html">About Us</a></li>
             <!--<li style="--i:4;"><a href="./Asssets/FORMS/contact us/contactus.html">Contact Us</a></li>-->
-            <li style="--i:4;"><a href="./Asssets/TermsofService/index.html">Work For US</a></li>
+            <!--<li style="--i:4;"><a href="./Asssets/TermsofService/index.html">Work For US</a></li>-->
             
             <br> 
-            <li style="--i:4;"><a href="./Asssets/Admin/password/password.html">Admin Login</a></li>
+            <!--<li style="--i:4;"><a href="./Asssets/Admin/password/password.html">Admin Login</a></li>-->
             <li style="--i:4;"><a href="https://qfcoihnqfwasuhqnfqwas.github.io/Sales-Team/">Service Sales Login</a></li>
             <!--<li style="--i:4;"><a href="./Asssets/Yoco-Service_form/Regestration-Form/service.html">Service Regestration Form</a></li>-->
         </ul>
@@ -27,15 +26,15 @@
         <h1>Welcome To Inventiveworks.</h1>
         <p>Select you're catigory.</p>
         <div>
-            <a href="3dprint.html">
+            <a href="https://inventiveworks.co.za/">
                 <button type="button">3D - Printing</button>
             </a>
             <a href="/Asssets/InventiveWorks/index.html">
                 <button type="button">Carpenter Work</button>
             </a>
-            <a href="/Asssets/soon/soon.html">
+            <!--<a href="/Asssets/soon/soon.html">
               <button type="button">Mobile Games</button>
-          </a>
+          </a>-->
             
         </div>
 
