--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <div class = "title">
                 <p class = "text">We are a Family Business Located in Gauteng, Alberton. 90% of the Website and UI was Designed by one person with a Love of Computers and Code.
                   <br>
-                  We keep our service up 24/7 with constant updates and changes.
+                  We keep our service up 24/7 with constant updates and changes. Hoppy Shopping :).
 
                 </p>
               </div>
