--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="content">
                     <span>Welcome To Inventiveworks</span>
                     <h3>The Power Of Three-Dimensional Thinking.</h3>
-                    <a href="https://inventiveworks.co.za/" class="btn">3D-Printing</a>
+                    <a href="https://inventiveworks.co.za/" class="btn">Tap To View 3D-Printing</a>
                     <a href="#" class="btn">Carpenter Work</a>
                 </div>
             </div>
