--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="content">
                     <span>Welcome To Inventiveworks</span>
                     <h3>The Power Of Three-Dimensional Thinking.</h3>
-                    <a href="https://inventiveworks.co.za/" class="btn">Tap To View 3D-Printing</a>
+                    <a href="https://inventiveworks.co.za/" class="btn">View 3D-Printing</a>
                     <a href="#" class="btn">Carpenter Work</a>
                 </div>
             </div>
@@ -169,7 +169,6 @@
 
     <div class="plan basic">
         <h3>basic plan</h3>
-        <h5>The R30 is a Order Fee.</h5>
         <div class="price"><span>R</span>30<span>Fee</span></div>
        <div class="list">
         <p> <i class="fas fa-check"></i> 10% Cut</p>
@@ -183,8 +182,7 @@
 
     <div class="plan basic">
         <h3>standard plan</h3>
-        <h5>The R50 is a Order Fee.</h5>
-        <div class="price"><span>R</span>50<span>Fee</span></div>
+        <div class="price"><span>R</span>0<span>Fee</span></div>
        <div class="list">
         <p> <i class="fas fa-check"></i> 15% Cut </p>
         <p> <i class="fas fa-check"></i> 15 Products </p>
@@ -197,8 +195,7 @@
 
     <div class="plan">
         <h3>pro plan</h3>
-        <h5>The R90 is a Order Fee.</h5>
-        <div class="price"><span>R</span>90<span>Fee</span></div>
+        <div class="price"><span>R</span>0<span>Fee</span></div>
        <div class="list">
         <p> <i class="fas fa-check"></i> 20% Cut </p>
         <p> <i class="fas fa-check"></i> 20 Products </p>
